--- a/app/views/rb_kanban_boards/show.html.erb
+++ b/app/views/rb_kanban_boards/show.html.erb
@@ -330,8 +330,7 @@ RB.Taskboard = (function ($) {
 <div class="ng-modal-window logwork-modal loading-indicator--location" style="display:none" data-indicator-name="modal">
  <div class="ng-modal-inner">
    <div class="modal-header d-flex justify-content-between">
-     <h2 class="ng-binding">Log Hours- #4772</h2>
-     <a class="close-btn"><i class="icon-close" ng-click="$ctrl.closeMe()" title="Close popup" role="button" tabindex="0"></i></a>
+     <h2 class="ng-binding">Log Hours</h2>
    </div>
    
    <div class="modal-content">
