--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -33,7 +33,6 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 See doc/COPYRIGHT.rdoc for more details.
 
 ++#%>
-
 <%
   managable = ApplicationHelper.get_kanban_status?(@project)
 %>
@@ -67,6 +66,110 @@ See doc/COPYRIGHT.rdoc for more details.
 <% end %>
 
 <% breadcrumb_paths(link_to(l(:label_backlogs), backlogs_project_backlogs_path(@project)), link_to(@sprint.name, backlogs_project_backlogs_path(@sprint))) %>
+
+<% if params[:controller] == "rb_taskboards" %>
+
+<div id='rb'>
+  <div id="taskboard" class="wp-work-wrapper">
+    <div id="wp-work" class="wp-work" style="height: 330px;">
+      <div id="wp-pool-column">
+        <div id="wp-pool" style="display: block; padding-top: 36px;">
+          <div id="wp-column-header-group" class="wp-column-header-group wp-fixed">
+            <ul id="wp-column-headers" class="wp-column-headers">
+              <% @statuses.each do |status| %>
+                <li class="wp-column">
+                  <div class="wp-column-header-flex">
+                    <div class="wp-column-header-flex-1">
+                      <h2><%= status.name %></h2>
+                    </div>
+                  </div>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+
+          <% if @sprint.stories(@project).any? %>
+            <% @sprint.stories(@project).each do |story| %>
+              <div class="wp-swimlane wp-first <%= story_html_id_or_empty(story) %>">
+                <div class="wp-swimlane-header <%= isKanbanboard(@project) ? 'story-hide' : '' %>">
+                  <div class="wp-heading story <%= mark_if_closed(story) %>" id="<%= story_html_id_or_empty(story) %>">
+                                <span class="wp-swimlane-avatar">
+                                <%= image_tag task_type_icon(story), class: "" %>
+                                </span>
+
+                    <%= work_package_link_or_empty(story) %>
+                    <span class="wp-info">
+                                    <span class="aui-lozenge"><%= story.status.name %></span>
+                                </span>
+                    <span class="wp-summary">
+                                    <%= story.subject %>
+                                </span>
+                  </div>
+                </div>
+
+                <div id="tasks">
+                  <ul class="wp-columns">
+                    <% @statuses.each do |status| %>
+                      <% if isKanbanboard(@project) == false %>
+                        <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="<%= story.id %>_<%= status.id %>">
+                          <%= render :partial => "rb_tasks/task",
+                                     :collection => story.tasks.select { |task| task.status.id == status.id } %>
+                        </li>
+                      <% else %>
+                        <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="<%= story.id %>_<%= status.id %>">
+                          <%= render :partial => "rb_tasks/task",
+                                     :collection => story.kanban_tasks.select { |task| task.status.id == status.id } %>
+                        </li>
+                      <% end %>
+                    <% end %>
+                  </ul>
+                </div>
+              </div>
+            <% end %>
+          <% else %>
+            <div class="no-data">
+              <div class="no-data-content">
+                <span class="no-data-img"></span>
+                <span class="no-data-title">There are no tasks for this board</span>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+  <div id="helpers">
+    <select class="assigned_to_id template" id="assigned_to_id_options">
+      <option value=""> </option>
+      <% @project.possible_assignees.each do |user| %>
+        <option value="<%= user.id %>" color="<%= get_backlogs_preference(user, :task_color) %>">
+          <%= user.name %>
+        </option>
+      <% end %>
+    </select>
+    <div id="task_template">
+      <%= render :partial => "rb_tasks/task", :object => Task.new, :locals => {:project => @project} %>
+    </div>
+    <div id="impediment_template">
+      <%= render :partial => "rb_impediments/impediment", :object => Impediment.new, :locals => {:project => @project} %>
+    </div>
+
+    <div id="work_package_editor"> </div>
+    <div class="meta" id="last_updated"><%= date_string_with_milliseconds( (@last_updated.blank? ? Time.now : @last_updated.updated_at) )  %></div>
+    <div id="charts"> </div>
+    <div id="preloader">
+      <div id="spinner"> </div>
+      <div id="warning"> </div>
+    </div>
+  </div>
+</div>
+
+
+<% else %>
 
 <div id='rb'>
   <div id="taskboard" class="wp-work-wrapper">
@@ -163,6 +266,7 @@ See doc/COPYRIGHT.rdoc for more details.
   </div>
 </div>
 
+<% end %>
 
 <div id="kanban-modal" class="new-kanban aside-panel-outer">
   <div class="aside-panel aside-panel-first">
