--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -447,3 +447,35 @@ RB.Taskboard = (function ($) {
     </div>
   </div>
 </div>
+
+
+
+
+<!--Modal-->
+
+<div class="ng-modal-window logwork-modal loading-indicator--location" style="display:none" data-indicator-name="modal">
+ <div class="ng-modal-inner">
+   <div class="modal-header d-flex justify-content-between">
+     <h2 class="ng-binding">Log Hours</h2>
+   </div>
+   
+   <div class="modal-content">
+     <p>To proceed further, please log your work.</p>
+     <div class="form--field mb-0">
+       <label class="form--label">HOURS</label>
+       <span class="form--field-container"><span class="form--text-field-container -wide"><input required="required" autofocus="autofocus" container_class="-wide" class="form--text-field log_hours" aria-required="true" type="text" value="" name="project[name]" id="project_name"></span></span>
+     </div>
+   </div>
+   <div class="modal-footer text-right">
+     <button class="button -alt-highlight m-0 log-hour-done">
+       DONE
+     </button>
+   </div>
+ </div>
+</div>
+
+
+
+
+
+
