--- a/app/views/rb_stories/_story.html.erb
+++ b/app/views/rb_stories/_story.html.erb
@@ -48,7 +48,8 @@ See doc/COPYRIGHT.rdoc for more details.
     <%= assignee_name_or_empty(story) %>
   </div>
   <div class="type_id editable" fieldtype="select" fieldname="type_id" fieldorder="1" field_id=<%= story.id %>>
-    <div class="t"><img src="type_icons/<%= (type_name_or_empty(story).to_s.gsub(' ','-').downcase) %>.png"></div>
+<!--    <div class="t"><img src="type_icons/<%#= (type_name_or_empty(story).to_s.gsub(' ','-').downcase) %>.png"></div>-->
+    <div class="t"><%= image_tag task_type_icon(story), class: "" %></div>
     <div class="v"><%= type_id_or_empty(story) %></div>
   </div>
   <div class="subject editable ellipsis" fieldname="subject" fieldorder="2" title="<%= h story.subject %>" field_id=<%= story.id %>><%=h story.subject %></div>
