Added mandatory minutes along with hours for Log Hours Pop UP

--- a/app/views/rb_kanban_boards/show.html.erb
+++ b/app/views/rb_kanban_boards/show.html.erb
@@ -339,6 +339,10 @@ RB.Taskboard = (function ($) {
        <label class="form--label">HOURS</label>
        <span class="form--field-container"><span class="form--text-field-container -wide"><input required="required" autofocus="autofocus" container_class="-wide" class="form--text-field log_hours" aria-required="true" type="text" value="" name="project[name]" id="project_name"></span></span>
      </div>
+     <div class="form--field mb-0">
+       <label class="form--label">MINUTES</label>
+       <span class="form--field-container"><span class="form--text-field-container -wide"><input required="required" autofocus="autofocus" container_class="-wide" class="form--text-field log_minutes" aria-required="true" type="text" value="" name="project[name]" id="project_name"></span></span>
+     </div>
    </div>
    <div class="modal-footer text-right">
      <button class="button -alt-highlight m-0 log-hour-done">
