--- a/app/views/rb_kanban_boards/show.html.erb
+++ b/app/views/rb_kanban_boards/show.html.erb
@@ -225,7 +225,38 @@ RB.Taskboard = (function ($) {
             </ul>
           </div>
           <% @statuses_rmv = [] %>
-          <% if @sprint.project && @sprint.work_packages.present? %>
+          <% if @project.project_type.name == "W-Suite project" %>
+            <% @sprint.work_packages.each do |story| %>
+              <div class="wp-swimlane wp-first <%= story_html_id_or_empty(story) %>">
+                <div class="wp-swimlane-header <%= @project.is_multi_kanban ? 'story-hide' : '' %>">
+                  <div class="wp-heading story <%= mark_if_closed(story) %>" id="<%= story_html_id_or_empty(story) %>">
+                      <span class="wp-swimlane-avatar">
+                      <%= image_tag task_type_icon(story), class: "" %>
+                      </span>
+                    <%= work_package_link_or_empty(story) %>
+                    <span class="wp-info">
+                      <span class="aui-lozenge"><%= story.status.name %></span>
+                    </span>
+                    <span class="wp-summary">
+                      <%= story.subject %>
+                    </span>
+                  </div>
+                </div>
+                <div id="tasks">
+                  <ul class="wp-columns">
+                    <% @statuses.each do |status| %>
+                      <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="<%= story.id %>_<%= status.id %>">
+                        <% if story.status.id == status.id%>
+                          <%= render :partial => "rb_tasks/wsuite_task",
+                                     :locals => { :task => story}  %>
+                        <% end %>
+                      </li>
+                    <% end %>
+                  </ul>
+                </div>
+              </div>
+            <% end %>
+          <% elsif @sprint.project && @sprint.work_packages.present? %>
             <% @sprint.work_packages.each do |story| %>
               <div class="wp-swimlane wp-first <%= story_html_id_or_empty(story) %>">
                 <div class="wp-swimlane-header <%= @project.is_multi_kanban ? 'story-hide' : '' %>">
